[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "androidbridgepy"
version = "0.0.1.1"
authors = [
  { name="Danielosw"},
]
description = "An ADB wrapper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danielosw/smallabdwrapper"
"Bug Tracker" = "https://github.com/danielosw/smallabdwrapper/issues"